@@ -20,7 +20,7 @@ Name: rpm
 %define version @VERSION@
 Version: %{version}
 %{expand: %%define rpm_version %{version}}
-Release: 0.29
+Release: 0.31
 Group: System Environment/Base
 Source: ftp://ftp.rpm.org/pub/rpm/dist/rpm-4.0.x/rpm-%{rpm_version}.tar.gz
 Copyright: GPL
@@ -476,6 +476,10 @@ exit 0
 %{__includedir}/popt.h
 
 %changelog
+* Mon Jul 21 2003 Jeff Johnson <jbj@redhat.com> 4.2.1-0.31
+- fix: packages w/o file colors segfault.
+- add amd64 as alias for x86_64 (#99553).
+
 * Wed Jul 16 2003 Jeff Johnson <jbj@redhat.com> 4.2.1-0.29
 - repair find-debuginfo.sh to avoid recursing in /usr/lib/debug.
 - fix: ia64: don't attempt autorelocate on .src.rpm's.
