@@ -18,6 +18,7 @@ optflags: i686 -O2 -g -march=i686
 optflags: athlon -O2 -g -march=athlon
 optflags: ia64 -O2 -g
 optflags: x86_64 -O2 -g
+optflags: amd64 -O2 -g
 
 optflags: alpha -O2 -g -mieee
 optflags: alphaev5 -O2 -g -mieee -mcpu=ev5
@@ -70,6 +71,7 @@ arch_canon:	i586:	i586	1
 arch_canon:	i486:	i486	1
 arch_canon:	i386:	i386	1
 arch_canon:	x86_64:	x86_64	1
+arch_canon:	amd64:	amd64	1
 
 arch_canon:	alpha:	alpha	2
 arch_canon:	alphaev5: alphaev5	2
@@ -200,6 +202,7 @@ buildarchtranslate: s390x: s390x
 buildarchtranslate: ia64: ia64
 
 buildarchtranslate: x86_64: x86_64
+buildarchtranslate: amd64: x86_64
 
 #############################################################
 # Architecture compatibility
@@ -268,7 +271,8 @@ arch_compat: s390x: s390 noarch
 
 arch_compat: ia64: noarch
 
-arch_compat: x86_64: athlon noarch
+arch_compat: x86_64: amd64 athlon noarch
+arch_compat: amd64: x86_64 athlon noarch
 
 os_compat:   IRIX64: IRIX
 os_compat: solaris2.7: solaris2.3 solaris2.4 solaris2.5 solaris2.6
@@ -356,6 +360,7 @@ buildarch_compat: s390x: noarch
 buildarch_compat: ia64: noarch
 
 buildarch_compat: x86_64: noarch
+buildarch_compat: amd64: noarch
 
 macrofiles:	@RPMCONFIGDIR@/macros:@RPMCONFIGDIR@/%{_target}/macros:@SYSCONFIGDIR@/macros.specspo:@SYSCONFIGDIR@/macros.prelink:@SYSCONFIGDIR@/macros.solve:@SYSCONFIGDIR@/macros.up2date:@SYSCONFIGDIR@/macros:@SYSCONFIGDIR@/%{_target}/macros:~/.rpmmacros
 
