@@ -26,6 +26,8 @@
 	- repair find-debuginfo.sh to avoid recursing in /usr/lib/debug.
 	- fix: ia64: don't attempt autorelocate on .src.rpm's.
 	- fix: debuginfo: -not -path /usr/lib/debug needed -prune too.
+	- fix: packages w/o file colors segfault.
+	- add amd64 as alias for x86_64 (#99553).
 
 4.1 -> 4.2:
 	- set cachesize without a dbenv, the default is far too small.
